TO DO:
    . Improve test coverage of methods
    . Add test for ->value with 3-args (setting)
    . Add test for ->highlight_node()
    . Add test for ->set_visible()
    . Add test for ->clickables()
    . Add test for getting/setting ->autodie()
    . Add test for getting/setting ->events()
    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs
    . Add tests for _field_by_name for #foo and .foo case

0.66 2012xxxx
    . Add example plus test on how to request arbitrary hostnames
      via the Host: header from an IP.

0.65 20120409
    + Add ->add_header() and ->delete_header
      Adapted from code from http://d.hatena.ne.jp/oppara/20090410/p1
    + Also allow changing the User-Agent header now via ->agent()
    ! Bump prerequisite for MozRepl::RemoteObject to 0.31, which has
      moved __dive to MozRepl::RemoteObject::Methods

0.64 20120329
    ! Bump prerequisite for MozRepl::RemoteObject to 0.30, which contains
      a bugfix for clobbered $@
    . Add test for clicking a button by value
    . Add test for clicking a button by id
    . Add test for ->new(tab => 'current')
    . Add test for ->new(tab => 'non-existing-tab')
    . Add test for checking that ->content(format => 'bogus') fails
    . Add "document" option to ->content() to optionally specify the
      document object of which the content is desired.
    . Add more documentation for the ->content() method.
    + Report more Firefox / Javascript errors from within the perspective of the caller
      instead of reporting lines within Firefox.pm

0.63 20120316
    ! Fix bad test from v0.62, no other code changes

0.62 20120316
    ! Fix bug in ->form_number that made it always fail when there
      was more than a single form on a page. Reported by Blake Willmarth.
    ! Explicitly import sleep() from Time::HiRes