@@ -128,8 +128,10 @@ t/65-is_visible_remove.html
 t/65-is_visible_text.html
 t/65-mech-meta.html
 t/65-mech-meta.t
+t/65-set_visible.t
 t/70-download-url.t
 t/70-mech-png.t
+t/70-real-status-timeout.t
 t/70-real-status.t
 t/70-rt70106-reload.t
 t/70-rt71216.html
