@@ -15,3 +15,4 @@ CVS/
 ^cover_db/
 ^db/
 ^firefox-versions/
+t/70-real-status-timeout.t
